Update framework to separate out I/O, Log, and Raft into separate projects and integrate resource implementations with those projects.